--- a/registration.html
+++ b/registration.html
@@ -61,6 +61,9 @@
     <label for="regno">Registration Number:</label>
     <input type="number" id="regno" name="regno" required>
 
+    <label for="sem">Semester Number:</label>
+    <input type="number" id="sem" name="sem" required>
+
     <input type="submit" value="Submit">
   </form>
 </body>
