--- a/registration.html
+++ b/registration.html
@@ -58,6 +58,9 @@
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" required>
 
+     <label for="sec">Section:</label>
+    <input type="text" id="sec" name="sec" required>
+    
     <label for="regno">Registration Number:</label>
     <input type="number" id="regno" name="regno" required>
 
