--- a/registration.html
+++ b/registration.html
@@ -64,7 +64,7 @@
     <label for="regno">Registration Number:</label>
     <input type="number" id="regno" name="regno" required>
 
-    <label for="sem">Semester Number:</label>
+    <label for="sem">Semester No:</label>
     <input type="number" id="sem" name="sem" required>
 
     <input type="submit" value="Submit">
