--- a/registration.html
+++ b/registration.html
@@ -66,7 +66,7 @@
 
     <label for="sem">Semester:</label>
     <input type="number" id="sem" name="sem" required>
-
+    <!-- the north remembers-->
     <input type="submit" value="Submit">
   </form>
 </body>
